--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,11 +59,88 @@
     }
 }
 
-@layer base {
+.text-gradient {
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+}
+
+.text-radial {
+    background-image: radial-gradient(
+        ellipse farthest-side,
+        rgb(113 103 104, 0.2) 20%,
+        black 70%
+    );
+    background-size: 100% 50%;
+    background-position: top center;
+}
+
+.text-radial-circle{
+    background-size: 50% 70%;
+    background-position: top cener;
+    background-repeat: no-repeat;
+    /* background-image: radial-gradient(circle, var(--tw-gradient-stops)); */
+}
+
+.backdrop-blur__safari{
+    --webkit-backdrop-filter: blur(5px);
+}
+
+.radial-blur {
+    -webkit-background-filter: blur(100px);
+    filter: blur(100px);
+    background-color: #070000;
+}
+
+@media only screen and (max-width: 800px) {
+    .text-radial-circle {
+       background-image: radial-gradient(
+        circle farthest-side,
+        rgb(113 103 104, 0.2) 20%,
+        black 70%
+    );
+    background-size: 100% 50%;
+    background-position: top center;
+    background-repeat: no-repeat;
+    }
+}
+
+.swiper-auto-height {
+    height: 100% !important;
+}
+
+/* @layer base {
     * {
         @apply border-border;
     }
     body {
         @apply bg-background text-foreground;
     }
+} */
+
+@keyframes blob {
+  0% {
+    transform: translate(0px, 0px) scale(1);
+  }
+  33% {
+    transform: translate(30px, -50px) scale(1.1);
+  }
+  66% {
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+  100% {
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+.animate-blob {
+  animation: blob 7s infinite;
+}
+
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+
+.animation-delay-4000 {
+  animation-delay: 4s;
 }
